workshop3/app-deploy_v1.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appv1-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: app
        version: v1
    spec:
      containers:
        - name: app-container
          image: stackupiss/northwind-app:v1
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          imagePullPolicy: IfNotPresent
          ports:
            - name: app-port
              containerPort: 3000
      restartPolicy: Always
