workshop3/app-deploy_v2.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appv2-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: app
        version: v2
    spec:
      containers:
        - name: appv2-container
          image: stackupiss/northwind-app:v2
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          imagePullPolicy: IfNotPresent
          ports:
            - name: appv2-port
              containerPort: 3000
      restartPolicy: Always
