workshop3/db-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    name: mysqldb
spec:
  replicas: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      name: mysqldb
  template:
    metadata:
      name: mysqldb-pod
      labels:
        name: mysqldb
    spec:
      volumes:
        - name: mysqldb-volume
          persistentVolumeClaim:
            claimName: mysqldb-pvc-day3
      containers:
        - name: mysqldb-container
          image: stackupiss/northwind-db:v1
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysqldb-port
              containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysqldb-volume
      restartPolicy: Always
