workshop3/app-deploy_v1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appv1-svc
spec:
  selector:
    name: app
    version: v1
  type: ClusterIP
  ports:
    - name: appv1-port
      port: 80
      targetPort: 3000
