workshop3/app-deploy_v2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appv2-svc
spec:
  selector:
    name: app
    version: v2
  type: ClusterIP
  ports:
    - name: appv2-port
      port: 80
      targetPort: 3000
