workshop3/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-svc
  labels:
    name: mysqldb
spec:
  type: ClusterIP
  selector:
    name: mysqldb
  ports:
    - name: mysqldb-svc-port
      port: 3306
      targetPort: mysqldb-port
